# NYC-Pedestrian-Counting

./: .gitignore  LPCV.code-workspace  README.md  Untitled Diagram.drawio  centroidtracker.cpp
EdgeLab/: requirements.txt
EdgeLab/notebooks/: Google-Colab-PFLD-Grove-Example.ipynb
EdgeLab/scripts/: setup_colab.sh
TestCameraWebServer/: wifi_credentials.h
TestCameraWebServer/CameraWebServer/: CameraWebServer.ino
esp32/: README.md
esp32/NYC_pedestrian_counter/: .gitignore  CMakeLists.txt  README.md  sdkconfig_  sdkconfig_]  sdkconfigs
esp32/NYC_pedestrian_counter/P2P_main/: README.md
esp32/NYC_pedestrian_counter/main/: CMakeLists.txt  LPCV.code-workspace  README.md  app_main.cpp  camera_main.cpp  config.h  idf_component.yml  main.cpp  main_2.cpp
esp32/components/esp32-camera/sensors/: gc032a.c
esp32/components/espressif__esp-dsp/: CMakeLists.txt  idf_component.yml
esp32/components/fb_gfx/: fb_gfx.c
esp32/components/fb_gfx/include/: fb_gfx.h
esp32/components/lora/: CMakeLists.txt  lora.c
esp32/components/lora/include/: lora.h
esp32/components/modules/: CMakeLists.txt
esp32/components/modules/EKF_forDroneLOL/: EKFGSF_yaw.h  airspeed_fusion.cpp  control.cpp  covariance.cpp  drag_fusion.cpp  ekf.cpp  ekf_helper.cpp  estimator_interface.cpp  geo.h  gps_checks.cpp  gps_yaw_fusion.cpp  helper_functions.hpp  imu_down_sampler.hpp  mag_control.cpp  mag_fusion.cpp  math.hpp  mathlib.h  optflow_fusion.cpp  sensor_range_finder.hpp  sideslip_fusion.cpp  utils.hpp  (+2 more)
esp32/model_zoo/: yolov8n_full_integer_quant.tflite  yolov8n_full_integer_quant_96_96.tflite
(+53 files in other folders)
